tdf#57307 - Expand word boundaries to include connector punctuations

Include connector punctuations when adding a variable to the watch
window using "Enable Watch (F7)" in order to add the correct variable name.

Change-Id: Idaf7699dde3f4147d603c6aea4b2381e2af497a0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/88575
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>